rnsc/test_data/rns_integration/error/parser/method_directive/unknown_directive_in_body.rns
.class UnknownDirectiveInMethod
.super java/lang/Object

.method main ()V
  .unknown_directive
.method_end
.class_end
